--- a/main.html
+++ b/main.html
@@ -13,7 +13,7 @@
 	<ul>
 		<li>cloud development</li>
 		<li>Desktop development</li>
-		<li>Viedo Sport development</li>
+		<li>Video Sport development</li>
 		<li>Mobile development</li>
 		<li>Web development</li>
 	</ul>
